substrate/frame/support/test/tests/pallet_ui/event_wrong_item.stderr
error: Invalid pallet::event, expected enum item
  --> tests/pallet_ui/event_wrong_item.rs:36:2
   |
36 |     pub struct Foo;
   |     ^^^
